<resources>
    <string name="app_name">Train App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="email_address">Email address</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="personal_photo">Personal photo</string>
    <string name="choose_image">choose image</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="specialization">Specialization</string>
    <string name="degree">Degree</string>
    <string name="bsc">BSc</string>
    <string name="msc">MSc</string>
    <string name="phd">PhD</string>
    <string name="sign_up">Sign up</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up_as_admin">Sign up as Admin</string>
    <string name="sign_up_as_student">Sign up as Student</string>
    <string name="sign_up_as_instructor">Sign up as Instructor</string>
    <string name="sign_up_as_admin_title">Sign up as Admin</string>
    <string name="register_as_a_student">Register as a student</string>
    <string name="add_course">Add Course</string>
    <string name="edit_delete">Edit/Delete</string>
    <string name="make_available">Make available</string>
    <string name="take_decisions">Take decisions</string>
    <string name="view_profiles">View Profiles</string>
    <string name="offering_history">Offering history</string>
    <string name="Create_New_Course_Title">Create a New Course</string>
    <string name="Course_Title">Course Title</string>
    <string name="Course_Main_Topic">Course Main Topic</string>
    <string name="prerequisites">Prerequisites</string>
    <string name="Course_Photo">Photo</string>
    <string name="Add_Course">Add Course</string>
    <string name="select_course">Select Course</string>
    <string name="instruction_name">Instruction Name</string>
    <string name="start_date">Start Date</string>
    <string name="schedule">Schedule</string>
    <string name="venue">Venue</string>
    <string name="add_registration">Add Registration</string>
</resources>