<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/border_color">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="4dp"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/studentSignUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:background="@drawable/btn_style_active"
            android:padding="5dp"
            android:text="@string/sign_up_as_student"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/instructorSignUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:background="@drawable/btn_style"
            android:padding="5dp"
            android:text="@string/sign_up_as_instructor"
            android:textColor="@color/color1" />

        <Button
            android:id="@+id/adminSignUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:background="@drawable/btn_style"
            android:padding="5dp"
            android:text="@string/sign_up_as_admin"
            android:textColor="@color/color1" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>