<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".AdminSignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/wave_signup">

            <ImageView
                android:id="@+id/back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                app:srcCompat="@drawable/arrow_back" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/sign_up_as_admin_title"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </LinearLayout>

        <!--            app:srcCompat="@drawable/messi" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/email_address" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:contentDescription="required"
                    app:srcCompat="@drawable/asterisk" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/input_box"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">


                <EditText
                    android:id="@+id/emailText"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:ems="9"
                    android:inputType="textEmailAddress"
                    android:paddingHorizontal="5dp"
                    android:text=""
                    android:textColor="@color/border_color_2" />

                <ImageView
                    android:id="@+id/emailImage"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/checktrue"
                    android:contentDescription="true" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/first_name" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:contentDescription="required"
                    app:srcCompat="@drawable/asterisk"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/input_box"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">

                <EditText
                    android:id="@+id/firstNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:ems="9"
                    android:inputType="textPersonName"
                    android:paddingHorizontal="5dp"
                    android:text=""
                    android:textColor="@color/border_color_2" />

                <ImageView
                    android:id="@+id/firstNameImage"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/checktrue"
                    android:contentDescription="true" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/last_name" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:contentDescription="required"
                    app:srcCompat="@drawable/asterisk"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/input_box"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">

                <EditText
                    android:id="@+id/lastNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:ems="9"
                    android:inputType="textPersonName"
                    android:paddingHorizontal="5dp"
                    android:text=""
                    android:textColor="@color/border_color_2" />

                <ImageView
                    android:id="@+id/lastNameImage"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/checktrue"
                    android:contentDescription="true" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/password" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:contentDescription="required"
                    app:srcCompat="@drawable/asterisk"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/input_box"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">

                <EditText
                    android:id="@+id/passwordText"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:ems="9"
                    android:inputType="textPassword"
                    android:paddingHorizontal="5dp"
                    android:text=""
                    android:textColor="@color/border_color_2" />

                <ImageView
                    android:id="@+id/passwordImage"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/wrong"
                    android:contentDescription="true" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/confirm_password" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:contentDescription="required"
                    app:srcCompat="@drawable/asterisk"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/input_box"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">

                <EditText
                    android:id="@+id/confirmPasswordText"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:ems="9"
                    android:inputType="textPassword"
                    android:paddingHorizontal="5dp"
                    android:text=""
                    android:textColor="@color/border_color_2" />

                <ImageView
                    android:id="@+id/confirmPasswordImage"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/wrong"
                    android:contentDescription="true" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/personal_photo" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:contentDescription="required"
                    app:srcCompat="@drawable/asterisk"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/personalPhoto"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/input_box"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">


                <TextView
                    android:id="@+id/textPhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/border_color"
                    android:paddingVertical="8dp"
                    android:text="@string/choose_image"
                    android:textAlignment="center" />

                <ImageView
                    android:id="@+id/imageViewPhoto"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/nav_account" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@drawable/btn_style_active"
                android:padding="5dp"
                android:text="@string/sign_up"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@drawable/btn_style"
                android:padding="5dp"
                android:text="@string/cancel"
                android:textColor="@color/color1" />

            <Button
                android:id="@+id/instructorSignUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@drawable/btn_style"
                android:padding="5dp"
                android:text="@string/sign_up_as_instructor"
                android:textColor="@color/color1" />

            <Button
                android:id="@+id/studentSignUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@drawable/btn_style"
                android:padding="5dp"
                android:text="@string/sign_up_as_student"
                android:textColor="@color/color1" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>