<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateNewCourseFragment">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        tools:context=".CreateNewCourseFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/wave_signup">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    app:srcCompat="@drawable/arrow_back" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/Create_New_Course_Title"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/Course_Title" />

                    <ImageView
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:contentDescription="required"
                        app:srcCompat="@drawable/asterisk" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/input_box"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="5dp">


                    <EditText
                        android:id="@+id/courseTitleText"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:ems="9"
                        android:paddingHorizontal="5dp"
                        android:text=""
                        android:textColor="@color/border_color_2" />

                    <ImageView
                        android:id="@+id/courseTitleImage"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/checktrue"
                        android:contentDescription="true" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/Course_Main_Topic" />

                    <ImageView
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:contentDescription="required"
                        app:srcCompat="@drawable/asterisk"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/input_box"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <EditText
                        android:id="@+id/courseMainTopicText"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:ems="9"
                        android:paddingHorizontal="5dp"
                        android:text=""
                        android:textColor="@color/border_color_2" />

                    <ImageView
                        android:id="@+id/courseMainTopicImage"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/checktrue"
                        android:contentDescription="true" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/prerequisites" />

                    <ImageView
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:contentDescription="required"
                        app:srcCompat="@drawable/asterisk"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/input_box"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <EditText
                        android:id="@+id/prerequisitesText"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:ems="9"
                        android:paddingHorizontal="5dp"
                        android:text=""
                        android:textColor="@color/border_color_2" />

                    <ImageView
                        android:id="@+id/prerequisitesImage"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/checktrue"
                        android:contentDescription="true" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/Course_Photo" />

                    <ImageView
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:contentDescription="required"
                        app:srcCompat="@drawable/asterisk"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/coursePhoto"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/input_box"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="5dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/border_color"
                        android:paddingVertical="8dp"
                        android:text="@string/choose_image"
                        android:textAlignment="center" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp">

                <Button
                    android:id="@+id/addCourseButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/btn_style_active"
                    android:padding="5dp"
                    android:text="@string/Add_Course"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/btn_style"
                    android:padding="5dp"
                    android:text="@string/cancel"
                    android:textColor="@color/color1" />


            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</FrameLayout>